# ChangeLog for dev-db/mysql
# Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.233 2005/09/11 16:41:55 vivo Exp $

  11 Sep 2005; Francesco Riosa <vivo@gentoo.org> mysql-4.0.25-r2.ebuild,
  mysql-4.0.26.ebuild, mysql-4.1.13-r1.ebuild, mysql-4.1.14.ebuild,
  mysql-5.0.12_beta.ebuild:
  Hidding passwords when requested in pkg_config().
  Thanks to Martin Schlemmer <azarah@gentoo.org> to point out how to do.

  10 Sep 2005; Aron Griffis <agriffis@gentoo.org> mysql-4.0.25-r2.ebuild:
  Mark 4.0.25-r2 stable on alpha

  09 Sep 2005; Francesco Riosa <vivo@gentoo.org> mysql-4.0.26.ebuild,
  mysql-4.1.14.ebuild, mysql-5.0.12_beta.ebuild:
  - Added "MYSQL_STRAIGHT_UPGRADE" to MySQL 4.1 ebuilds, this permit to upgrade
  plainly from 4.0 series. A similar patch for 5.0 will follow.
  - Uniformation of mysql-4.1 ebuild to the 5.1 series one, now diff -Naur of the
  two should be smaller
  - fix for Bug #103975 dev-db/mysql shouldn't use enewuser and enewgroup in
  src_install() The bug was introduced when fixing bug #95320.
  - also mysql-4.1 now downloads mysql-extras-*.tar.bz2 from gentoo mirrors.

*mysql-4.0.26 (08 Sep 2005)

  08 Sep 2005; Francesco Riosa <vivo@gentoo.org> +mysql-4.0.26.ebuild,
  mysql-5.0.12_beta.ebuild:
  4.0 series bump to 4.0.26, gradually removing the needs of $FILESDIR
  minor changes to 5.0 ebuild

*mysql-5.0.12_beta (05 Sep 2005)

  05 Sep 2005; Francesco Riosa <vivo@gentoo.org>
  files/035_x86_asm-pic-fixes-r1.patch,
  files/035_x86_asm-pic-fixes-r2.patch,
  files/010_all_my-print-defaults-r2.patch,
  files/701_all_test-myisam-geometry.patch, -mysql-5.0.9_beta-r2.ebuild,
  -mysql-5.0.10_beta.ebuild, +mysql-5.0.12_beta.ebuild:
  version bump for MySQL-5.0
  changed comments in patches

  03 Sep 2005; Markus Rothe <corsair@gentoo.org> mysql-4.0.25-r2.ebuild:
  Stable on ppc64

*mysql-4.1.14 (29 Aug 2005)
