@@ -1,6 +1,9 @@
 # ChangeLog for dev-db/mysql
 # Copyright 2002-2005 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.233 2005/09/11 16:41:55 vivo Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/mysql/ChangeLog,v 1.234 2005/09/11 18:08:44 vivo Exp $
+
+  11 Sep 2005; Francesco Riosa <vivo@gentoo.org> mysql-4.0.26.ebuild:
+  Added discover of a previous $DATADIR like other recent ebuilds
 
   11 Sep 2005; Francesco Riosa <vivo@gentoo.org> mysql-4.0.25-r2.ebuild,
   mysql-4.0.26.ebuild, mysql-4.1.13-r1.ebuild, mysql-4.1.14.ebuild,
